clear all codes
