# src/app.js
@@ -26,8 +26,10 @@ app.use("/api/admins", adminController);
 // Protected routes (perlu token login)
 const karyawanController = require("./karyawan/karyawan.controller");
 app.use("/api/karyawans", adminAuthorization, karyawanController);
+
 const divisiController = require("./divisi/divisi.controller");
 app.use("/api/divisis", adminAuthorization, divisiController);
+
 const jabatanController = require("./jabatan/jabatan.controller");
 app.use("/api/jabatans", adminAuthorization, jabatanController);
 
@@ -37,14 +39,8 @@ app.use("/api/statuskepegawaian", adminAuthorization, statusKepegawaianControlle
 const kelasController = require("./kelas/kelas.controller");
 app.use("/api/kelas", adminAuthorization, kelasController);
 
-const absensiController = require("./absensi/absensi.controller");
-app.use("/api/absensis", adminAuthorization, absensiController);
-
 const waliKelasController = require("./walikelas/walikelas.controller");
 app.use("/api/walikelas", adminAuthorization, waliKelasController);
-
-const laporanAbsensiController = require("./laporanabsensi/laporanabsensi.controller");
-app.use("/api/laporanabsensi", adminAuthorization, laporanAbsensiController);
 
 const guruController = require("./guru/guru.controller");
 app.use("/api/guru", adminAuthorization, guruController);
